# chaotic.sh

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  justfile
backend/: .coveragerc  README.md  alembic.ini  oxyde_config.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  enums.py  main.py  oxyde_db.py  version.py  websocket.py
backend/migrations/: 0001_initial.py  0002_cleanup_orphan_sprints.py  0003_cleanup_orphan_sprints_retry.py  0004_ritual_intent_unique_indexes.py  0005_ticket_limbo_intent_blockers.py  0006_document_revisions.py  0006_normalize_datetime_format.py  0007_issue_description_revisions.py  0007_normalize_enum_storage.py  0008_unique_project_key_label_name.py  0009_add_issue_lease_expires_at.py  0009_document_revisions.py  0009_inbox_entries.py  0010_issue_description_revisions.py  0011_add_issue_lease_expires_at.py  0012_inbox_entries.py  0013_templates.py  0014_add_inbox_archived_at.py
backend/scripts/: add_ritual_is_active.sql  add_rituals.sql  add_sprint_budget_fields.sql
backend/tests/: conftest.py  test_agent_endpoint_access.py  test_agents.py  test_api_keys.py  test_auth.py  test_auth_deps.py  test_coverage_gaps.py  test_cross_references.py  test_datetime_normalization_migration.py  test_document_access_control.py  test_documents.py  test_email_service.py  test_enum_normalization_migration.py  test_error_handling.py  test_inbox.py  test_infrastructure.py  test_issue_access_control.py  test_issue_service_coverage.py  test_issue_validation.py  test_issues.py  test_issues_coverage_954.py  test_labels.py  test_mcp_endpoint.py  test_mcp_scope.py  test_mcp_tools_direct.py  test_mcp_toolset_sync.py  test_mcp_transport_security.py  test_migration_guard.py  test_nested_routes.py  test_oxyde_create_defaults.py  test_projects.py  test_ready_and_leases.py  test_require_estimate_on_claim.py  test_revision_concurrency.py  test_ritual_api_coverage.py  test_ritual_concurrency.py  test_ritual_invariants.py  test_ritual_observability.py  test_rituals.py  test_rituals_coverage_955.py  (+16 more)
cli/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
cli/scripts/: gen_mcp_toolset_schema.py
cli/tests/: conftest.py  test_alias_commands.py  test_auth_commands.py  test_await_cmd.py  test_client_error_handling.py  test_config_functions.py  test_config_show.py  test_content_resolution.py  test_decorator_chain.py  test_doc_commands.py  test_epic.py  test_epic_commands.py  test_inbox_commands.py  test_issue_actions.py  test_issue_ready.py  (+39 more)
e2e/: .gitignore  conftest.py  pyproject.toml  pytest.ini  test_agents.py  test_api_keys.py  test_auth.py  test_documents.py  test_inbox.py  test_issues.py  test_labels.py  test_mcp.py  test_projects.py  test_rituals.py  test_smoke.py  test_sprints.py  test_teams.py  test_templates.py
(+276 files in other folders)
