[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaotic-backend"
version = "1.0.0"
description = "Chaotic - Issue tracking backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "greenlet>=3.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0,<4.1",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "aiosqlite>=0.19.0",
    "email-validator>=2.1.0",
    "jinja2>=3.1.3",
    "itsdangerous>=2.1.2",
    "alembic>=1.18.3",
    "oxyde>=0.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
