[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaotic-cli"
version = "0.1.0a11"
description = "CLI for Chaotic issue tracking system"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Third Bear Solutions" }
]
keywords = ["cli", "issue-tracker", "project-management", "chaotic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Bug Tracking",
]
dependencies = [
    "httpx>=0.26.0,<1.0.0",
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://chaotic.sh"
Repository = "https://github.com/thethirdbearsolutions/chaotic.sh"
Documentation = "https://chaotic.sh/docs"

[project.scripts]
chaotic = "cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]

[tool.hatch.build.targets.sdist]
include = ["src/cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
